chore : bug fix too much whitespace

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
   --color-ourblack: #383838;
   --color-ourwhite: #d9d9d9;
   --color-ourgray: #cccccc;
-  --color-ourblue: #0000FF; 
+  --color-ourblue: #0000ff;
 }
 .mycontainer {
   @apply container mx-auto lg:px-12 md:px-32 px-8  xl:px-24;
